--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
                                                 <div class="portfolio-border clearfix">
                                                     <div class="item_info">
                                                         <h3>Brand1</h3>
-                                                        <p>Brand1 간단 설명</p>
-                                                        <p><a href="#" target="_blank">http://www.dothome.co.kr</a></p>
+                                                        <p>Circen</p>
                                                         <div class="project_btn_box">
-                                                            <a href="#" target="_blank" class="project_btn">BI&amp;BX
+                                                            <a href="https://ssssuhyun.github.io/Circen_Branding/" target="_blank" class="project_btn">BI&amp;BX
                                                                 Guide</a>
-                                                            <a href="#" target="_blank" class="project_btn">Web
+                                                            <a href="https://ssssuhyun.github.io/Circen_BIBX/" target="_blank" class="project_btn">Mockup Design</a>
+                                                            <a href="https://ssssuhyun.github.io/Circen_UIUX/" target="_blank" class="project_btn">Web
                                                                 Guide</a>
                                                         </div>
                                                     </div>
@@ -212,10 +212,8 @@
                                                     <div class="item_info">
                                                         <h3>Brand2</h3>
                                                         <p>Brand2 간단 설명</p>
-                                                        <p><a href="#" target="_blank">http://www.dothome.co.kr</a></p>
                                                         <div class="project_btn_box">
-                                                            <a href="#" target="_blank" class="project_btn">BI&amp;BX
-                                                                Guide</a>
+                                                            <a href="https://ssssuhyun.github.io/Circen_Ebook/Ebook/samples/Circen_Ebook/" target="_blank" class="project_btn">E-book</a>
                                                             <a href="#" target="_blank" class="project_btn">Web
                                                                 Guide</a>
                                                         </div>
