--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@
                                 <nav class="categories">
                                     <ul class="portfolio_filter">
                                         <li><a href="" class="active" data-filter="*">All</a></li>
-                                        <li><a href="" data-filter=".brand1">Brand1</a></li>
-                                        <li><a href="" data-filter=".brand2">Brand2</a></li>
+                                        <li><a href="" data-filter=".brand1">Circen</a></li>
+                                        <!-- <li><a href="" data-filter=".brand2">brand</a></li> -->
+                                        <li><a href="" data-filter=".brand3">Artworks</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -167,7 +168,7 @@
                                 <!-- single work -->
                                 <div class="col-md-12 brand1">
                                     <div class="col-md-4 col-sm-6">
-                                        <div class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image"
+                                        <div class="portfolio_item"> <img src="img/portfolio/Circen/01.jpg" alt="image"
                                                 class="img-responsive" />
 
                                         </div>
@@ -178,14 +179,44 @@
                                             <div class="portfolio_item">
                                                 <div class="portfolio-border clearfix">
                                                     <div class="item_info">
-                                                        <h3>Brand1</h3>
+                                                        <h3>BI&amp;BX Design</h3>
                                                         <p>Circen</p>
                                                         <div class="project_btn_box">
                                                             <a href="https://ssssuhyun.github.io/Circen_Branding/" target="_blank" class="project_btn">BI&amp;BX
                                                                 Guide</a>
                                                             <a href="https://ssssuhyun.github.io/Circen_BIBX/" target="_blank" class="project_btn">Mockup Design</a>
+                                                            
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- end single work -->
+                                <!-- single work -->
+                                <div class="col-md-12 brand1">
+
+                                    <div class="col-md-4 col-sm-6">
+                                        <div class="portfolio_item"> <img src="img/portfolio/Circen/03.jpg" alt="image"
+                                                class="img-responsive" />
+
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-8 col-sm-6">
+                                        <div class="portfolio_item">
+                                            <div class="portfolio_item">
+                                                <div class="portfolio-border clearfix">
+                                                    <div class="item_info">
+                                                        <h3>UI&amp;UX Design</h3>
+                                                        <p>Circen</p>
+                                                        <div class="project_btn_box">
+                                                            
                                                             <a href="https://ssssuhyun.github.io/Circen_UIUX/" target="_blank" class="project_btn">Web
                                                                 Guide</a>
+                                                                <a href="https://ssssuhyun.github.io/Circen/" target="_blank" class="project_btn">Web
+                                                                    Site</a>    
                                                         </div>
                                                     </div>
                                                 </div>
@@ -196,10 +227,10 @@
                                 <!-- end single work -->
 
                                 <!-- single work -->
-                                <div class="col-md-12 brand2">
+                                <div class="col-md-12 brand1">
 
                                     <div class="col-md-4 col-sm-6">
-                                        <div class="portfolio_item"> <img src="img/portfolio/02.jpg" alt="image"
+                                        <div class="portfolio_item"> <img src="img/portfolio/Circen/02.jpg" alt="image"
                                                 class="img-responsive" />
 
                                         </div>
@@ -210,12 +241,10 @@
                                             <div class="portfolio_item">
                                                 <div class="portfolio-border clearfix">
                                                     <div class="item_info">
-                                                        <h3>Brand2</h3>
-                                                        <p>Brand2 간단 설명</p>
+                                                        <h3>E-Book</h3>
+                                                        <p>Circen</p>
                                                         <div class="project_btn_box">
-                                                            <a href="https://ssssuhyun.github.io/Circen_Ebook/Ebook/samples/Circen_Ebook/" target="_blank" class="project_btn">E-book</a>
-                                                            <a href="#" target="_blank" class="project_btn">Web
-                                                                Guide</a>
+                                                            <a href="https://ssssuhyun.github.io/Circen_Ebook/Ebook/samples/Circen_Ebook/" target="_blank" class="project_btn">E-Book</a>
                                                         </div>
                                                     </div>
                                                 </div>
