--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skill">skill</a></li>
-                <li><a href="#projects">projects</a></li>
-                <li><a href="#Artwork">Artwork</a></li>
+                <li><a href="#projects">portfolio</a></li>
                 <li><a href="#experience">experience</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
@@ -66,8 +65,7 @@
         <div class="section" id="about">
             <div class="container">
                 <div class="col-md-6 about-img-div">
-                    <img src="img/about-img.jpg" width="323" height="452" class="img-responsive" alt="" align="right"
-                        data-aos="fade-right" data-aos-delay="0" />
+                    <img src="img/about-img.jpg" width="323" height="452" width="323" height="452" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
                 </div>
                 <div class="col-md-6 " data-aos="fade-up">
                     <h1 class="size-50 smile"><img src="img/smile.png" alt="">About me</h1>
@@ -143,7 +141,7 @@
         <div class="section" id="projects">
             <div class="container">
                 <div class="col-md-12">
-                    <h1 class="size-50">Projects</h1>
+                    <h1 class="size-50 title rainbow">Portfolio <img src="img/rainbow.png" alt=""></h1> 
                 </div>
                 <!-- main container -->
                 <div class="main-container portfolio-inner clearfix">
