--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         <div class="section" id="skill">
             <div class="container">
                 <div class="col-md-12" data-aos="fade-up">
-                    <h1 class="size-50 title skill">Skill</h1>
+                    <div class="line"></div>
+                    <h1 class="size-50 title skill center">Skill</h1>
                     <div class="h-50"></div>
                 </div>
                 <div class="col-md-3" data-aos="fade-up">
@@ -105,12 +106,12 @@
                 </div>
                 <div class="col-md-3" data-aos="fade-up">
                     <div class="chart" data-percent="95" data-aos="fade-up" data-aos-duration="1000">
-                        <span class="title">HTML/CSS <br>95%</span>
+                        <span class="title">InDesign <br>95%</span>
                     </div>
                 </div>
                 <div class="col-md-3" data-aos="fade-up">
                     <div class="chart" data-percent="95" data-aos="fade-up" data-aos-duration="1000">
-                        <span class="title">InDesign <br>95%</span>
+                        <span class="title">HTML/CSS <br>95%</span>
                     </div>
                 </div>
                 <div class="col-md-3" data-aos="fade-up">
@@ -141,7 +142,7 @@
         <div class="section" id="projects">
             <div class="container">
                 <div class="col-md-12">
-                    <h1 class="size-50 title rainbow">Portfolio <img src="img/rainbow.png" alt=""></h1> 
+                    <h1 class="size-50 title rainbow center">Portfolio <img src="img/rainbow.png" alt=""></h1> 
                 </div>
                 <!-- main container -->
                 <div class="main-container portfolio-inner clearfix">
@@ -330,7 +331,7 @@
         <div class="section" id="contact">
             <div class="container">
                 <div class="col-md-12">
-                    <h1 class="size-50 title">Contact Me <img src="img/yellow_flower.png" alt="">
+                    <h1 class="size-50 title center">Contact Me <img src="img/yellow_flower.png" alt="">
                     </h1>
                     <div class="h-50"></div>
                 </div>
