--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <div class="section" id="about">
             <div class="container">
                 <div class="col-md-6 about-img-div">
-                    <img src="img/about-img.jpg" width="323" height="452" width="323" height="452" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
+                    <img src="img/about-img.jpg" width="323" height="452" class="img-responsive" alt="" align="right"
+                        data-aos="fade-right" data-aos-delay="0" />
                 </div>
                 <div class="col-md-6 " data-aos="fade-up">
                     <h1 class="size-50 smile"><img src="img/smile.png" alt="">About me</h1>
@@ -142,7 +143,7 @@
         <div class="section" id="projects">
             <div class="container">
                 <div class="col-md-12">
-                    <h1 class="size-50 title rainbow center">Portfolio <img src="img/rainbow.png" alt=""></h1> 
+                    <h1 class="size-50 title rainbow center">Portfolio <img src="img/rainbow.png" alt=""></h1>
                 </div>
                 <!-- main container -->
                 <div class="main-container portfolio-inner clearfix">
@@ -181,10 +182,12 @@
                                                         <h3>BI&amp;BX Design</h3>
                                                         <p>Circen</p>
                                                         <div class="project_btn_box">
-                                                            <a href="https://ssssuhyun.github.io/Circen_Branding/" target="_blank" class="project_btn">BI&amp;BX
+                                                            <a href="https://ssssuhyun.github.io/Circen_Branding/"
+                                                                target="_blank" class="project_btn">BI&amp;BX
                                                                 Guide</a>
-                                                            <a href="https://ssssuhyun.github.io/Circen_BIBX/" target="_blank" class="project_btn">Mockup Design</a>
-                                                            
+                                                            <a href="https://ssssuhyun.github.io/Circen_BIBX/"
+                                                                target="_blank" class="project_btn">Mockup Design</a>
+
                                                         </div>
                                                     </div>
                                                 </div>
@@ -211,11 +214,13 @@
                                                         <h3>UI&amp;UX Design</h3>
                                                         <p>Circen</p>
                                                         <div class="project_btn_box">
-                                                            
-                                                            <a href="https://ssssuhyun.github.io/Circen_UIUX/" target="_blank" class="project_btn">Web
+
+                                                            <a href="https://ssssuhyun.github.io/Circen_UIUX/"
+                                                                target="_blank" class="project_btn">Web
                                                                 Guide</a>
-                                                                <a href="https://ssssuhyun.github.io/Circen/" target="_blank" class="project_btn">Web
-                                                                    Site</a>    
+                                                            <a href="https://ssssuhyun.github.io/Circen/"
+                                                                target="_blank" class="project_btn">Web
+                                                                Site</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -243,7 +248,8 @@
                                                         <h3>E-Book</h3>
                                                         <p>Circen</p>
                                                         <div class="project_btn_box">
-                                                            <a href="https://ssssuhyun.github.io/Circen_Ebook/Ebook/samples/Circen_Ebook/" target="_blank" class="project_btn">E-Book</a>
+                                                            <a href="https://ssssuhyun.github.io/Circen_Ebook/Ebook/samples/Circen_Ebook/"
+                                                                target="_blank" class="project_btn">E-Book</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -252,6 +258,94 @@
                                     </div>
                                 </div>
                                 <!-- end single work -->
+                                <!-- single work -->
+                                <div class="col-md-12 brand3">
+
+                                    <div class="col-md-4 col-sm-6">
+                                        <div class="portfolio_item"> <img src="img/portfolio/Circen/02.jpg" alt="image"
+                                                class="img-responsive" />
+
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-8 col-sm-6">
+                                        <div class="portfolio_item">
+                                            <div class="portfolio_item">
+                                                <div class="portfolio-border clearfix">
+                                                    <div class="item_info">
+                                                        <h3>Banner</h3>
+                                                        <div class="project_btn_box">
+                                                            <a href="#"
+                                                                target="_blank" class="project_btn">art1</a>
+                                                            <a href="#"
+                                                                target="_blank" class="project_btn">art2</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- end single work -->
+                                <!-- single work -->
+                                <div class="col-md-12 brand3">
+
+                                    <div class="col-md-4 col-sm-6">
+                                        <div class="portfolio_item"> <img src="img/portfolio/Circen/02.jpg" alt="image"
+                                                class="img-responsive" />
+
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-8 col-sm-6">
+                                        <div class="portfolio_item">
+                                            <div class="portfolio_item">
+                                                <div class="portfolio-border clearfix">
+                                                    <div class="item_info">
+                                                        <h3>Poster</h3>
+                                                        <div class="project_btn_box">
+                                                            <a href="#"
+                                                                target="_blank" class="project_btn">art1</a>
+                                                            <a href="#"
+                                                                target="_blank" class="project_btn">art2</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- end single work -->
+                                <!-- single work -->
+                                <div class="col-md-12 brand3">
+
+                                    <div class="col-md-4 col-sm-6">
+                                        <div class="portfolio_item"> <img src="img/portfolio/Circen/02.jpg" alt="image"
+                                                class="img-responsive" />
+
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-8 col-sm-6">
+                                        <div class="portfolio_item">
+                                            <div class="portfolio_item">
+                                                <div class="portfolio-border clearfix">
+                                                    <div class="item_info">
+                                                        <h3>Character</h3>
+                                                        <div class="project_btn_box">
+                                                            <a href="#"
+                                                                target="_blank" class="project_btn">art1</a>
+                                                            <a href="#"
+                                                                target="_blank" class="project_btn">art2</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- end single work -->
+
 
                             </div>
                             <!-- end portfolio_container -->
