--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                 </div>
                                 <!-- end single work -->
                                 <!-- single work -->
-                                <div class="col-md-12 brand3">
+                                <!-- <div class="col-md-12 brand3">
 
                                     <div class="col-md-4 col-sm-6">
                                         <div class="portfolio_item"> <img src="img/portfolio/Circen/02.jpg" alt="image"
@@ -285,10 +285,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end single work -->
                                 <!-- single work -->
-                                <div class="col-md-12 brand3">
+                                <!-- <div class="col-md-12 brand3">
 
                                     <div class="col-md-4 col-sm-6">
                                         <div class="portfolio_item"> <img src="img/portfolio/Circen/02.jpg" alt="image"
@@ -314,10 +314,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end single work -->
                                 <!-- single work -->
-                                <div class="col-md-12 brand3">
+                                <!-- <div class="col-md-12 brand3">
 
                                     <div class="col-md-4 col-sm-6">
                                         <div class="portfolio_item"> <img src="img/portfolio/Circen/02.jpg" alt="image"
@@ -343,7 +343,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- end single work -->
 
 
@@ -379,7 +379,7 @@
                         <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
                             <label class="timeline-event-icon"></label>
                             <div class="timeline-event-copy">
-                                <p class="timeline-event-thumbnail">November 2014 - Mars 2016</p>
+                                <p class="timeline-event-thumbnail">November 2023</p>
                                 <h3>자격증</h3>
                                 <h4>컴퓨터활용 2급 필기 합격</h4>
                             </div>
@@ -387,7 +387,7 @@
                         <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
                             <label class="timeline-event-icon"></label>
                             <div class="timeline-event-copy">
-                                <p class="timeline-event-thumbnail">November 2014 - Mars 2016</p>
+                                <p class="timeline-event-thumbnail">November 2022</p>
                                 <h3>자격증</h3>
                                 <h4>정보처리기사 필기 합격</h4>
                             </div>
@@ -395,7 +395,7 @@
                         <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
                             <label class="timeline-event-icon"></label>
                             <div class="timeline-event-copy">
-                                <p class="timeline-event-thumbnail">April 2014</p>
+                                <p class="timeline-event-thumbnail">April 2022</p>
                                 <h3>자격증</h3>
                                 <h4>운전면허증 2종 보통 취득</h4>
                             </div>
@@ -403,7 +403,7 @@
                         <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
                             <label class="timeline-event-icon"></label>
                             <div class="timeline-event-copy">
-                                <p class="timeline-event-thumbnail">April 2014</p>
+                                <p class="timeline-event-thumbnail">April 2022</p>
                                 <h3>대학교 졸업</h3>
                                 <h4>영산대학교 전기전자공학과</h4>
                             </div>
@@ -411,7 +411,7 @@
                         <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
                             <label class="timeline-event-icon"></label>
                             <div class="timeline-event-copy">
-                                <p class="timeline-event-thumbnail">April 2014</p>
+                                <p class="timeline-event-thumbnail">April 2016</p>
                                 <h3>고등학교 졸업</h3>
                                 <h4>김해 여자고등학교</h4>
                             </div>
