--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         <!-- about -->
         <div class="section" id="about">
             <div class="container">
-                <div class="col-md-6 about-img-div">
+                <div class="col-md-4 about-img-div">
                     <img src="img/about-img.jpg" width="323" height="452" class="img-responsive" alt="" align="right"
                         data-aos="fade-right" data-aos-delay="0" />
                 </div>
-                <div class="col-md-6 " data-aos="fade-up">
+                <div class="col-md-8 introduce " data-aos="fade-up">
                     <h1 class="size-50 smile"><img src="img/smile.png" alt="">About me</h1>
                     <div class="h-50"></div>
                     <p class="sub_title">안녕하세요. 가치를 추구하는 디자이너 김수현입니다!</p>
@@ -91,7 +91,6 @@
         <div class="section" id="skill">
             <div class="container">
                 <div class="col-md-12" data-aos="fade-up">
-                    <div class="line"></div>
                     <h1 class="size-50 title skill center">Skill</h1>
                     <div class="h-50"></div>
                 </div>
