--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>🌼김수현의 포트폴리오🌼</title>
+    <link rel="icon" type="image/png" href="img/sparkling.png"/>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
@@ -65,20 +66,20 @@
         <div class="section" id="about">
             <div class="container">
                 <div class="col-md-4 about-img-div">
-                    <img src="img/about-img.jpg" width="323" height="452" class="img-responsive" alt="" align="right"
+                    <img src="img/profile.png" width="323" height="452" class="img-responsive" alt="" align="right"
                         data-aos="fade-right" data-aos-delay="0" />
                 </div>
-                <div class="col-md-8 introduce " data-aos="fade-up">
+                <div class="col-md-8 " data-aos="fade-up">
                     <h1 class="size-50 smile"><img src="img/smile.png" alt="">About me</h1>
                     <div class="h-50"></div>
-                    <p class="sub_title">안녕하세요. 가치를 추구하는 디자이너 김수현입니다!</p>
+                    <p class="sub_title">안녕하세요. 착실히 나아가는 디자이너 김수현입니다!</p>
                     <p>처음에는 포토샵이나 일러스트같은 기본적인 툴도 다룰 줄 모르는 초보자라 하나부터 열가지 다 배워야하는 것에 대해 부담도 느끼고, 여러가지 고민도 많았습니다. 차근차근 배워가며
                         나만의 작업물을 하나씩 완성해가다보니 점점 디자인이 재미있다는 생각이 들게 되었습니다.
                         <br><br>
                         '내가 할 수 있는 것을 하나라도 더 보여주고 싶다'는 마음에 작업물들을 계속 추가하고 수정하는 과정이 쉽지만은 않았지만 막상 결과물을 보니 처음 시작했을 때의 자신이
                         생각나면서 신기하기도 하고, 보람차다는 생각이 듭니다.
                         <br><br>
-                        아직 배운 것보다는 배울 것이 많은 초보 디자이너지만 항상 최선을 다하는 디자이너가 되고 싶습니다. 감사합니다.
+                        아직 배운 것보다는 배울 것이 많은 초보지만 항상 최선을 다하는 디자이너가 되고 싶습니다. 감사합니다.
                     </p>
                     <div class="h-50"></div>
                 </div>
@@ -106,7 +107,7 @@
                 </div>
                 <div class="col-md-3" data-aos="fade-up">
                     <div class="chart" data-percent="95" data-aos="fade-up" data-aos-duration="1000">
-                        <span class="title">InDesign <br>95%</span>
+                        <span class="title">XD <br>95%</span>
                     </div>
                 </div>
                 <div class="col-md-3" data-aos="fade-up">
@@ -121,7 +122,7 @@
                 </div>
                 <div class="col-md-3" data-aos="fade-up">
                     <div class="chart" data-percent="85" data-aos="fade-up" data-aos-duration="1000">
-                        <span class="title">responsive web <br>85%</span>
+                        <span class="title">InDesign <br>85%</span>
                     </div>
                 </div>
                 <div class="col-md-3" data-aos="fade-up">
@@ -178,77 +179,17 @@
                                             <div class="portfolio_item">
                                                 <div class="portfolio-border clearfix">
                                                     <div class="item_info">
-                                                        <h3>BI&amp;BX Design</h3>
-                                                        <p>Circen</p>
+                                                        <h3>Circen</h3>
+                                                        <p>환경을 생각하는 제로웨이스트 브랜드</p>
                                                         <div class="project_btn_box">
-                                                            <a href="https://ssssuhyun.github.io/Circen_Branding/"
+                                                            <a href="https://ssssuhyun.github.io/Circen_BIBX/"
                                                                 target="_blank" class="project_btn">BI&amp;BX
                                                                 Guide</a>
-                                                            <a href="https://ssssuhyun.github.io/Circen_BIBX/"
-                                                                target="_blank" class="project_btn">Mockup Design</a>
-
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- end single work -->
-                                <!-- single work -->
-                                <div class="col-md-12 brand1">
-
-                                    <div class="col-md-4 col-sm-6">
-                                        <div class="portfolio_item"> <img src="img/portfolio/Circen/03.jpg" alt="image"
-                                                class="img-responsive" />
-
-                                        </div>
-                                    </div>
-
-                                    <div class="col-md-8 col-sm-6">
-                                        <div class="portfolio_item">
-                                            <div class="portfolio_item">
-                                                <div class="portfolio-border clearfix">
-                                                    <div class="item_info">
-                                                        <h3>UI&amp;UX Design</h3>
-                                                        <p>Circen</p>
-                                                        <div class="project_btn_box">
-
                                                             <a href="https://ssssuhyun.github.io/Circen_UIUX/"
-                                                                target="_blank" class="project_btn">Web
-                                                                Guide</a>
-                                                            <a href="https://ssssuhyun.github.io/Circen/"
-                                                                target="_blank" class="project_btn">Web
-                                                                Site</a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- end single work -->
-
-                                <!-- single work -->
-                                <div class="col-md-12 brand1">
-
-                                    <div class="col-md-4 col-sm-6">
-                                        <div class="portfolio_item"> <img src="img/portfolio/Circen/02.jpg" alt="image"
-                                                class="img-responsive" />
-
-                                        </div>
-                                    </div>
-
-                                    <div class="col-md-8 col-sm-6">
-                                        <div class="portfolio_item">
-                                            <div class="portfolio_item">
-                                                <div class="portfolio-border clearfix">
-                                                    <div class="item_info">
-                                                        <h3>E-Book</h3>
-                                                        <p>Circen</p>
-                                                        <div class="project_btn_box">
+                                                                target="_blank" class="project_btn">Web Guide</a>
                                                             <a href="https://ssssuhyun.github.io/Circen_Ebook/Ebook/samples/Circen_Ebook/"
                                                                 target="_blank" class="project_btn">E-Book</a>
+
                                                         </div>
                                                     </div>
                                                 </div>
@@ -257,6 +198,7 @@
                                     </div>
                                 </div>
                                 <!-- end single work -->
+                               
                                 <!-- single work -->
                                 <!-- <div class="col-md-12 brand3">
 
